# fng

./: Anchor.toml  package-lock.json  package.json
app/: config-overrides.js  package.json
app/src/: App.css  App.tsx  index.css  index.tsx
app/src/components/: BetTable.tsx  CurrentFnG.tsx  FAQ.tsx  fng_chart.tsx  footer.tsx  menu.tsx  new_bet.tsx  snack_alert.tsx  sweeper.tsx  withdraw.tsx
app/src/models/: index.ts
app/src/redux/actions/: index.ts  types.ts
app/src/redux/reducers/: index.ts
app/src/sc/: get_game.ts  get_player.ts  new_bet.ts  withdraw.ts
app/src/types/: fng.ts
console/: close_game.ts  copy_idl.sh  faucet.ts  get_game.ts  get_player.ts  init_fng.ts  new_bet.ts  new_game.ts  new_player.ts  tsconfig.json  update_oracle.ts  withdraw.ts
console/idl/: fng.js  fng.json  fng.ts
programs/fng/: Cargo.toml
programs/fng/src/: lib.rs
programs/fng/src/instructions/: close_game.rs  config_fng.rs  mod.rs  new_bet.rs  new_game.rs  new_player.rs  update_oracle.rs  withdraw.rs
programs/fng/src/state/: config_pda.rs  error_model.rs  game_pda.rs  mod.rs  player_pda.rs  util.rs
tests/: fng.ts
